2004-12-14  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	* winprocarg.c:
	EnumDisplayMonitors is not available on Window NT4 and 95. Resolve
	the function dynamicly

2004-12-08  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c:
	* winprocarg.c:
	Added support for placing the main window with the @<monitor#>.
	Patch by Mark Fisher, small changes by Alexander Gottwald
	
2004-12-06  Alexander Gottwald  <ago at freedesktop dot org>

	* XWin.rc:
	include windows.h

2004-12-05  Alexander Gottwald  <ago at freedesktop dot org>

	* ddraw.h:
	redone ddraw.h to be able to mix it with w32api style COM header 
	files. 
	
	* winmultiwindowwm.c:
	* obj_base.h:
	* ddraw.h:
	obj_base.h is not needed anymore. Using <objbase.h> instead.

	* winms.h:
	Use Xwindows.h instead of windows.h

	* winresource.h:
	do not include win_ms.h
	
	* win.h:
	remove extra definition of sleep()

	* InitOutput.c:
	Set HOME to Documents and Settings/username if not set
	
	* winprefs.c:
	Use Xming basedir instead of ProjectRoot for system.XWinrc

	* windialogs.c:
	* winshadgdi.c:
	* winprefs.c:
	Fix callback functions to use wBOOL instead of BOOL

	* winmultiwindowwindow.c:
	* winwin32rootless.c:
	* winwin32rootlesswindow.c:
	* winerror.c:
	Fix compiler warnings. Added debug output.

	* winconfig.c:
	Fix warning about undefined macro max
	
2004-12-04  Earle Philhower

	* InitOutput.c:
	* win.h:
	* wincreatewnd.c:
	* winprocarg.c:
	Optional position -screen parameter (-screen n WxH+X+Y or 
	-screen n W H X Y)

2004-12-03  Alexander Gottwald  <ago at freedesktop dot org>

	* windialogs.c:
	* win.h:
	* Imakefile:
	* winerror.c:
	Removed scprintf, aprintf and snprintf stuff and use newXprintf

2004-12-02  Alexander Gottwald  <ago at freedesktop dot org>

	* winwin32rootless.c:
	Adjust the width of the rootless backbuffer to match 32 bit alignment

	* winprocarg.c:
	Make multiplemonitors default for -internalwm
