@@ -1,3 +1,9 @@
+2005-01-06  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* winmultiwindowclass.c:
+	* winmultiwindowwm.c:
+	Fix crash with non-nullterminated strings (reported by Øyvind Harboe)
+
 2004-12-14  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* InitOutput.c:
